# example-android-fileopen

./: Cargo.toml  README.md  quad.toml
examples/: fileopen.rs
java/: MainActivity.java
java/fileopen/: FileOpen.java
src/: lib.rs
